# postcode-api

./: README.md  main.py  pyproject.toml  test.py
app/scrapers/: jppost_scraper.py
app/utils/: prefectures.py
