[project]
name = "postcode-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryotaro694", email = "unknown@domain.invalid" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "playwright>=1.52.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/postcode_api"]
